# bridge-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: release.yml  rust.yml
.sqlx/: query-045d2c6adf0df49f5fb26bf8e21848edc00915b87bc7f911f4cc65760fedd33f.json  query-1780f7cc46df7e368f058c4d6604abdd8bac5de0a9ac71c248ac7c841edec225.json  query-1f462ee285c4a76eb6d8bcde2e47d99e7065eefe46d695b8479b7bd5a2c0b399.json  query-21dca3256a7a79288113e7c965c848af7c0f953e5581b2d3cdb7ac51c15451cd.json  query-27b3205a1fd69c6ad7f1ae684855441ee2881e6491fc3af0ad94b7dbad358604.json  query-3b851bd17804aa27c9d98b2955d1de15e4e557164a8bcbb8c494b827118d8c3f.json  query-3ed137e1d484a819494dbe3b18865cab902fc76df32b349bea5b6435594725a6.json  query-49f3e13c0095e27ca3ef37a6a89ca6b97d97a17c1406fb65ba6abd94d76f0dfb.json  query-5c32bc668d421304f3d98a360cebb16504818380440854d3b881996fa71b42b4.json  query-9e1ba88ba6987620787b440dcefd3c1c17d0a7a6556c2a54c96e19e5c2859b88.json  query-a50a2fb6422efdf7cb82668bdb1aa81abe0e32c5d1be6d76ef476b1162decbff.json  query-b4e72b9ba8a6b9d8947e2fdd6b58ecad9ad0c9bd398c13fdd879dced0dc81c43.json  query-b5a64187798ec3a1e508a9bf292efb14fad2067e4368acc28d9ebed2fc5b5ded.json  query-b72f35989278d4040cfefa81e06bb575cfe288f5155df959ccde95012ab67038.json  query-d17ee610fd451e04cf3d45a65394a18edb4357092ce6a54fb4a068252864b04e.json  query-d6489ae90b6ffe84e84308002c828e3a13aa8d7fbd0f47252e26752879ec8844.json  query-db37570b43a1f74e8c61573aedc0549967c51ba7a87d54bcb2a15d7897302609.json  query-e0a8aca997debb235130c33f586b3fc0a75a0f9fd4c278080645d7e67d321f4a.json  query-e3955d345fd82dc14b1793a2fea89c289cb8cf1e5b95c1e5f08a12f1e5d441b5.json
sql/: insert_tx.sql  query_avail_tx.sql  query_eth_tx.sql
src/: main.rs  models.rs  query_avail_tx.sql  query_eth_tx.sql  schema.rs
src/abi/: SP1Vector.json
