[package]
name = "bridge-api"
version = "0.1.0"
edition = "2021"
authors = ["Avail Team"]
default-run = "bridge-api"
repository = "https://github.com/availproject/bridge-api.git"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.5.4", features = ["serde"] }
axum = { version = "0.7.2", features = ["http2", "macros", "tracing"] }
dotenvy = "0.15.7"
jsonrpsee = { version = "0.20.3", features = ["http-client", "macros", "async-client"] }
reqwest = { version = "0.11.23", features = ["json", "brotli"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "parking_lot"] }
tower-http = { version = "0.5.0", features = ["trace", "compression-br"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sp-io = "32.0.0"
sp-core = "30.0.0"
chrono = "0.4.34"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[profile.debug-fast]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
