[package]
name = "bridge-api"
version = "0.1.2"
edition = "2024"
authors = ["Avail Team"]
default-run = "bridge-api"
repository = "https://github.com/availproject/bridge-api.git"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.0.27", features = ["serde", "json"] }
axum = { version = "0.8", features = ["http2", "macros", "tracing"] }
dotenvy = "0.15"
jsonrpsee = { version = "0.26.0", features = ["http-client", "macros", "async-client"] }
reqwest = { version = "0.12", features = ["json", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha3 = "0.10"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "parking_lot"] }
tower-http = { version = "0.6.6", features = ["trace", "compression-br", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sp-io = "34.0"
sp-core = "34.0"
avail-core = { git = "https://github.com/availproject/avail-core", tag = "core-node-3"}
http = "1.1"
backon = { version = "1.5.2", features = ["tokio-sleep"] }
anyhow = "1"
lazy_static = "1.5"
serde_with = "3.11.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "bigdecimal"] }
#alloy-rpc-types ="1.0.27"
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4"] }
log = "0.4.25"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.debug-fast]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
